@@ -77,6 +77,7 @@ S3method(makeRLearner,classif.mda)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
+S3method(makeRLearner,classif.nodeHarvest)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
@@ -127,6 +128,7 @@ S3method(makeRLearner,regr.lm)
 S3method(makeRLearner,regr.mars)
 S3method(makeRLearner,regr.mob)
 S3method(makeRLearner,regr.nnet)
+S3method(makeRLearner,regr.nodeHarvest)
 S3method(makeRLearner,regr.pcr)
 S3method(makeRLearner,regr.penalized.lasso)
 S3method(makeRLearner,regr.penalized.ridge)
@@ -209,6 +211,7 @@ S3method(predictLearner,classif.mda)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
+S3method(predictLearner,classif.nodeHarvest)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
@@ -258,6 +261,7 @@ S3method(predictLearner,regr.lm)
 S3method(predictLearner,regr.mars)
 S3method(predictLearner,regr.mob)
 S3method(predictLearner,regr.nnet)
+S3method(predictLearner,regr.nodeHarvest)
 S3method(predictLearner,regr.pcr)
 S3method(predictLearner,regr.penalized.lasso)
 S3method(predictLearner,regr.penalized.ridge)
@@ -381,6 +385,7 @@ S3method(trainLearner,classif.mda)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
+S3method(trainLearner,classif.nodeHarvest)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
@@ -430,6 +435,7 @@ S3method(trainLearner,regr.lm)
 S3method(trainLearner,regr.mars)
 S3method(trainLearner,regr.mob)
 S3method(trainLearner,regr.nnet)
+S3method(trainLearner,regr.nodeHarvest)
 S3method(trainLearner,regr.pcr)
 S3method(trainLearner,regr.penalized.lasso)
 S3method(trainLearner,regr.penalized.ridge)
